# controllers/recipes.js
@@ -10,10 +10,14 @@ const getAllRecipes = async (req, res) => {
   });
 };
 
-const getSingleRecipe = async (req, res) =>{
+const getSingleRecipe = async (req, res) => {
   const recipeId = new objectId(req.params.id);
 
-  const result = await mongodb.getDb().db('Pets_Meal_Planner').collection('recipe').find( {_id: recipeId} );
+  const result = await mongodb
+    .getDb()
+    .db('Pets_Meal_Planner')
+    .collection('recipe')
+    .find({ _id: recipeId });
 
   result.toArray().then((list) => {
     res.setHeader('Content-Type', 'application/json');
@@ -26,9 +30,13 @@ const createRecipe = async (req, res) => {
     title: req.body.title,
     ingredients: req.body.ingredients,
     instructions: req.body.instructions,
-    nutrition: req.body.nutrition    
+    nutrition: req.body.nutrition
   };
-  const response = await mongodb.getDb().db('Pets_Meal_Planner').collection('recipe').insertOne(recipe);
+  const response = await mongodb
+    .getDb()
+    .db('Pets_Meal_Planner')
+    .collection('recipe')
+    .insertOne(recipe);
   if (response.acknowledged) {
     res.status(201).json(response);
   } else {
@@ -37,7 +45,6 @@ const createRecipe = async (req, res) => {
 };
 
 const updateRecipe = async (req, res) => {
-
   const recipeId = new objectId(req.params.id);
 
   const recipe = {
@@ -45,28 +52,34 @@ const updateRecipe = async (req, res) => {
     ingredients: req.body.ingredients,
     instructions: req.body.instructions,
     nutrition: req.body.nutrition
-  }
+  };
 
-  const response = await mongodb.getDb().db('Pets_Meal_Planner').collection('recipe').replaceOne({_id: recipeId}, recipe);
+  const response = await mongodb
+    .getDb()
+    .db('Pets_Meal_Planner')
+    .collection('recipe')
+    .replaceOne({ _id: recipeId }, recipe);
   if (response.acknowledged) {
     res.status(202).json(recipe);
-  }
-  else {
-    res.status(402).json(recipe.error || "OOPS something went wrong")
+  } else {
+    res.status(402).json(recipe.error || 'OOPS something went wrong');
   }
 };
 
 const deleteRecipe = async (req, res) => {
   const recipeId = new objectId(req.params.id);
 
-  const response = await mongodb.getDb().db('Pets_Meal_Planner').collection('recipe').deleteOne({_id: recipeId});
+  const response = await mongodb
+    .getDb()
+    .db('Pets_Meal_Planner')
+    .collection('recipe')
+    .deleteOne({ _id: recipeId });
 
   if (response.acknowledged > 0) {
-    res.status(205).json("Recipe Succesfully Deleted")
+    res.status(205).json('Recipe Succesfully Deleted');
+  } else {
+    res.status(405).json(response.err || 'OOPS Something went wrong');
   }
-  else {
-    res.status(405).json(response.err || "OOPS Something went wrong")
-  }
-}
+};
 
 module.exports = { getAllRecipes, getSingleRecipe, createRecipe, updateRecipe, deleteRecipe };
